finalizing years for lab 5

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -44,31 +44,37 @@
     {
         "title": "Accusamus iusto voluptates hic.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Adipisci officia ad molestiae quasi? Ad, neque maiores? Iusto deleniti excepturi ipsam culpa assumenda ex delectus, eum laudantium libero? Alias beatae aperiam possimus odio esse nobis veritatis impedit non doloribus."
     },
     {
         "title": "Modi, iure. Unde, a!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Ipsam sed enim distinctio nihil optio omnis. Eius veniam culpa, repellendus iste hic voluptate laborum numquam dolore eveniet inventore alias deserunt dignissimos cum earum obcaecati voluptatem delectus vel. Iure, modi."
     },
     {
         "title": "Dicta nulla dolorem magni?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Laboriosam officiis necessitatibus blanditiis explicabo nam mollitia, minus odio error ipsam ducimus aliquid perferendis cum velit at earum reiciendis suscipit illum harum, nisi praesentium numquam quibusdam maiores. Soluta, facere molestiae."
     },
     {
         "title": "Facere magnam ratione rem.",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Nobis vel, voluptates molestias inventore beatae nam ipsum! Suscipit dicta vero provident reprehenderit aliquid maiores, iste atque dolor tempore ullam impedit nihil quae vitae ab sit amet facilis enim. Quis."
     },
     {
         "title": "Laborum deserunt rem commodi!",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Suscipit quod totam dicta laboriosam dolorum labore sit! Cumque, eligendi? A, assumenda sunt eius earum maxime distinctio! Iste nisi quam tempora dolorum ducimus molestias repellendus aspernatur beatae libero doloremque? Sed."
     },
     {
         "title": "Eos minus molestias ea?",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "year": "2000",
         "description": "Asperiores dignissimos commodi sapiente nemo illo voluptatum enim sint provident exercitationem accusantium iste, blanditiis sit dolore tempore modi repellendus illum beatae veritatis fugit minus, laboriosam eveniet. Perferendis quaerat sint iste."
     }
 ]
