final edits lab 7

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"prebuild": "npx elocuent -d static,src -o static/loc.csv", 
+		"prebuild": "npx elocuent -d static,src -o static/loc.csv",
 		"build": "vite build",
 		"preview": "vite preview"
 	},
@@ -18,6 +18,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.6.13",
 		"d3": "^7.9.0"
 	}
 }
